manifests/influxdb/base/manifest.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: influxdb
  labels:
    app: influxdb
spec:
  replicas: 1
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Delete
  selector:
    matchLabels:
      app: influxdb
  serviceName: "influxdb"
  template:
    metadata:
      labels:
        app: influxdb
    spec:
      serviceAccountName: influxdb
      containers:
        - name: influxdb
          image: "influxdb:2.7.4-alpine"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8086
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health
              port: http
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health
              port: http
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3
          volumeMounts:
            - name: data
              mountPath: /var/lib/influxdb2
          resources: {}
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: influxdb
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        selector:
          matchLabels:
            app: influxdb
        accessModes:
          - "ReadWriteOnce"
        storageClassName: freenas-iscsi-manual-csi
        resources:
          requests:
            storage: "8Gi"

---
apiVersion: v1
kind: Service
metadata:
  name: influxdb
spec:
  type: ClusterIP
  selector:
    app: influxdb
  ports:
    - name: http
      port: 8086
      targetPort: http

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: influxdb
  labels:
    app: influxdb
spec:
  ingressClassName: nginx-private
  rules:
    - host: influxdb.lan.theautomation.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: influxdb
                port:
                  name: http
